<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_user_type"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="uk.ac.coventry.a260ct.orks.slopemanager.registration.UserTypeActivity"
    tools:showIn="@layout/activity_user_type">

    <Button
        android:text="Next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="77dp"
        android:id="@+id/button_advance_to_register_act"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_user_type"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="Please choose from the drop down menu the type of user you wish to be registered as"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_user_type"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_above="@+id/spinner_user_type"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp" />
</RelativeLayout>
