<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.ac.coventry.a260ct.orks.slopemanager.registration.AboutYouFragment"
    android:orientation="vertical">

    <TextView
        android:text="First Name:"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="91dp"
        android:id="@+id/firstName_text_view"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="120dp" />

    <TextView
        android:text="Surname:"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:id="@+id/surname_text_view"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="120dp"
        android:layout_below="@+id/firstName_text_view"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/firstName_edit_text"
        android:hint="Name goes here..."
        android:layout_alignBaseline="@+id/firstName_text_view"
        android:layout_alignBottom="@+id/firstName_text_view"
        android:layout_toEndOf="@+id/firstName_text_view"
        android:imeOptions="actionDone"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/surname_edit_text"
        android:hint="Name goes here..."
        android:layout_alignBaseline="@+id/surname_text_view"
        android:layout_alignBottom="@+id/surname_text_view"
        android:layout_toEndOf="@+id/surname_text_view"
        android:imeOptions="actionDone"/>

    <TextView
        android:text="Phone:"
        android:layout_height="wrap_content"
        android:id="@+id/phone_text_view"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="120dp"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        />

    <TextView
        android:text="Date of Birth"
        android:layout_height="wrap_content"
        android:id="@+id/dob_text_view"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="120dp"
        android:layout_below="@+id/phone_text_view"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp" />

    <TextView
        android:text="Email"
        android:layout_height="wrap_content"
        android:id="@+id/email_text_view"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="120dp"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/dob_text_view"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/email_edit_text"
        android:hint="Email goes here.."
        android:layout_alignBaseline="@+id/email_text_view"
        android:layout_alignBottom="@+id/email_text_view"
        android:layout_toEndOf="@+id/email_text_view"
        android:imeOptions="actionDone"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/phone_edit_text"
        android:hint="Name goes here..."
        android:layout_alignBaseline="@+id/phone_text_view"
        android:layout_alignBottom="@+id/phone_text_view"
        android:layout_toEndOf="@+id/phone_text_view"
        android:imeOptions="actionDone"
        android:inputType="phone" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName|date"
        android:ems="10"
        android:id="@+id/dob_edit_text"
        android:hint="Name goes here..."
        android:layout_alignBaseline="@+id/dob_text_view"
        android:layout_alignBottom="@+id/dob_text_view"
        android:layout_toEndOf="@+id/dob_text_view"
        android:imeOptions="actionDone"/>

</RelativeLayout>
