<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView
        android:text="Username:"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="113dp"
        android:id="@+id/usernameTextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_marginStart="33dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Button
        android:text="Submit Form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        android:id="@+id/buttonSubmitForm" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/username_edit_text_login_frag"
        android:layout_alignBaseline="@+id/usernameTextView"
        android:layout_alignBottom="@+id/usernameTextView"
        android:layout_toEndOf="@+id/usernameTextView"
        android:hint="Name"
        android:imeOptions="actionDone"/>

    <TextView
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="27dp"
        android:id="@+id/passwordTextView"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:layout_below="@+id/username_edit_text_login_frag"
        android:layout_toStartOf="@+id/username_edit_text_login_frag"
        android:text="Password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="Password"
        android:ems="10"
        android:id="@+id/user_password_loggin_fragment"
        android:layout_alignBaseline="@+id/passwordTextView"
        android:layout_alignBottom="@+id/passwordTextView"
        android:layout_toEndOf="@+id/passwordTextView"
        android:inputType="textPassword" />
</RelativeLayout>