<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_vertical_margin">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Register"
        android:id="@+id/registration_title"
        android:textSize="30sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:hint="Mr/Mrs.."
        android:id="@+id/prefix_input"
        android:layout_alignParentStart="true"
        android:layout_below="@id/registration_title"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:hint="Date of birth (dd/mm/yy)"
        android:id="@+id/dob_input"
        android:layout_alignParentStart="true"
        android:layout_below="@id/registration_title"
        android:layout_marginTop="20dp" />

</RelativeLayout>